[metadata]
name = k8t
url = https://github.com/ClarkSource/k8t
author = Aljosha Friemann
author_email = aljosha.friemann@clark.de
description = Kubernetes templating engine based on Jinja2
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kubernetes, jinja, multi-cluster, templating
platforms = linux
license_file = LICENSE.txt
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
  Jinja2
  ruamel.yaml
  boto3
  click
  coloredlogs
  simple_tools
  bitmath

[options.entry_points]
console_scripts =
  k8t = k8t.cli:main

[options.extras_require]
ujson = ujson

[options.packages.find]
exclude =
  assets
  tests

[options.package_data]
* = *.txt, *.md, *.rst

[flake8]
max-line-length = 160

[pylint]
max-line-length = 160
disable = bad-continuation,too-few-public-methods,missing-module-docstring,missing-class-docstring,missing-function-docstring
output-format = colorized
ignore-docstrings = yes
